Rubberduck.Parsing/Preprocessing/VBADateParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.5.3
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from C:\Users\hosch\Documents\Visual Studio 2015\Projects\Rubberduck\Rubberduck.Parsing\PreProcessing\VBADate.g4 by ANTLR 4.5.3

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

namespace Rubberduck.Parsing.Date {
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using System.Collections.Generic;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.5.3")]
[System.CLSCompliant(false)]
public partial class VBADateParser : Parser {
	public const int
		AMPM=1, LINE_CONTINUATION=2, JANUARY=3, FEBRUARY=4, MARCH=5, APRIL=6, 
		MAY=7, JUNE=8, JULY=9, AUGUST=10, SEPTEMBER=11, OCTOBER=12, NOVEMBER=13, 
		DECEMBER=14, JAN=15, FEB=16, MAR=17, APR=18, JUN=19, JUL=20, AUG=21, SEP=22, 
		OCT=23, NOV=24, DEC=25, AM=26, PM=27, HASH=28, COMMA=29, DASH=30, SLASH=31, 
		COLON=32, DOT=33, WS=34, DIGIT=35;
	public const int
		RULE_compilationUnit = 0, RULE_dateLiteral = 1, RULE_dateOrTime = 2, RULE_dateValue = 3, 
		RULE_dateValuePart = 4, RULE_dateValueNumber = 5, RULE_dateSeparator = 6, 
		RULE_monthName = 7, RULE_englishMonthName = 8, RULE_englishMonthAbbreviation = 9, 
		RULE_timeValue = 10, RULE_timeValuePart = 11, RULE_timeSeparator = 12;
	public static readonly string[] ruleNames = {
		"compilationUnit", "dateLiteral", "dateOrTime", "dateValue", "dateValuePart", 
		"dateValueNumber", "dateSeparator", "monthName", "englishMonthName", "englishMonthAbbreviation", 
		"timeValue", "timeValuePart", "timeSeparator"
	};

	private static readonly string[] _LiteralNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "'#'", "','", "'-'", "'/'", "':'", "'.'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "AMPM", "LINE_CONTINUATION", "JANUARY", "FEBRUARY", "MARCH", "APRIL", 
		"MAY", "JUNE", "JULY", "AUGUST", "SEPTEMBER", "OCTOBER", "NOVEMBER", "DECEMBER", 
		"JAN", "FEB", "MAR", "APR", "JUN", "JUL", "AUG", "SEP", "OCT", "NOV", 
		"DEC", "AM", "PM", "HASH", "COMMA", "DASH", "SLASH", "COLON", "DOT", "WS", 
		"DIGIT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[System.Obsolete("Use Vocabulary instead.")]
	public static readonly string[] tokenNames = GenerateTokenNames(DefaultVocabulary, _SymbolicNames.Length);

	private static string[] GenerateTokenNames(IVocabulary vocabulary, int length) {
		string[] tokenNames = new string[length];
		for (int i = 0; i < tokenNames.Length; i++) {
			tokenNames[i] = vocabulary.GetLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = vocabulary.GetSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}

		return tokenNames;
	}

	[System.Obsolete]
	public override string[] TokenNames
	{
		get
		{
			return tokenNames;
		}
	}

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "VBADate.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return _serializedATN; } }

	public VBADateParser(ITokenStream input)
		: base(input)
	{
		_interp = new ParserATNSimulator(this,_ATN);
	}
	public partial class CompilationUnitContext : ParserRuleContext {
		public DateLiteralContext dateLiteral() {
			return GetRuleContext<DateLiteralContext>(0);
		}
		public ITerminalNode Eof() { return GetToken(VBADateParser.Eof, 0); }
		public CompilationUnitContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compilationUnit; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterCompilationUnit(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitCompilationUnit(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompilationUnit(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompilationUnitContext compilationUnit() {
		CompilationUnitContext _localctx = new CompilationUnitContext(_ctx, State);
		EnterRule(_localctx, 0, RULE_compilationUnit);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 26; dateLiteral();
			State = 27; Match(Eof);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateLiteralContext : ParserRuleContext {
		public ITerminalNode[] HASH() { return GetTokens(VBADateParser.HASH); }
		public ITerminalNode HASH(int i) {
			return GetToken(VBADateParser.HASH, i);
		}
		public DateOrTimeContext dateOrTime() {
			return GetRuleContext<DateOrTimeContext>(0);
		}
		public ITerminalNode[] WS() { return GetTokens(VBADateParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(VBADateParser.WS, i);
		}
		public ITerminalNode[] LINE_CONTINUATION() { return GetTokens(VBADateParser.LINE_CONTINUATION); }
		public ITerminalNode LINE_CONTINUATION(int i) {
			return GetToken(VBADateParser.LINE_CONTINUATION, i);
		}
		public DateLiteralContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dateLiteral; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterDateLiteral(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitDateLiteral(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDateLiteral(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DateLiteralContext dateLiteral() {
		DateLiteralContext _localctx = new DateLiteralContext(_ctx, State);
		EnterRule(_localctx, 2, RULE_dateLiteral);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 29; Match(HASH);
			State = 35;
			_la = _input.La(1);
			if (_la==LINE_CONTINUATION || _la==WS) {
				{
				State = 31;
				_errHandler.Sync(this);
				_la = _input.La(1);
				do {
					{
					{
					State = 30;
					_la = _input.La(1);
					if ( !(_la==LINE_CONTINUATION || _la==WS) ) {
					_errHandler.RecoverInline(this);
					} else {
						Consume();
					}
					}
					}
					State = 33;
					_errHandler.Sync(this);
					_la = _input.La(1);
				} while ( _la==LINE_CONTINUATION || _la==WS );
				}
			}

			State = 37; dateOrTime();
			State = 38; Match(HASH);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateOrTimeContext : ParserRuleContext {
		public DateValueContext dateValue() {
			return GetRuleContext<DateValueContext>(0);
		}
		public TimeValueContext timeValue() {
			return GetRuleContext<TimeValueContext>(0);
		}
		public ITerminalNode[] WS() { return GetTokens(VBADateParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(VBADateParser.WS, i);
		}
		public DateOrTimeContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dateOrTime; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterDateOrTime(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitDateOrTime(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDateOrTime(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DateOrTimeContext dateOrTime() {
		DateOrTimeContext _localctx = new DateOrTimeContext(_ctx, State);
		EnterRule(_localctx, 4, RULE_dateOrTime);
		int _la;
		try {
			State = 50;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,3,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 40; dateValue();
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 41; timeValue();
				}
				break;

			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 42; dateValue();
				State = 44;
				_errHandler.Sync(this);
				_la = _input.La(1);
				do {
					{
					{
					State = 43; Match(WS);
					}
					}
					State = 46;
					_errHandler.Sync(this);
					_la = _input.La(1);
				} while ( _la==WS );
				State = 48; timeValue();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateValueContext : ParserRuleContext {
		public DateValuePartContext[] dateValuePart() {
			return GetRuleContexts<DateValuePartContext>();
		}
		public DateValuePartContext dateValuePart(int i) {
			return GetRuleContext<DateValuePartContext>(i);
		}
		public DateSeparatorContext[] dateSeparator() {
			return GetRuleContexts<DateSeparatorContext>();
		}
		public DateSeparatorContext dateSeparator(int i) {
			return GetRuleContext<DateSeparatorContext>(i);
		}
		public DateValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dateValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterDateValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitDateValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDateValue(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DateValueContext dateValue() {
		DateValueContext _localctx = new DateValueContext(_ctx, State);
		EnterRule(_localctx, 6, RULE_dateValue);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 52; dateValuePart();
			State = 53; dateSeparator();
			State = 54; dateValuePart();
			State = 58;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,4,_ctx) ) {
			case 1:
				{
				State = 55; dateSeparator();
				State = 56; dateValuePart();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateValuePartContext : ParserRuleContext {
		public DateValueNumberContext dateValueNumber() {
			return GetRuleContext<DateValueNumberContext>(0);
		}
		public MonthNameContext monthName() {
			return GetRuleContext<MonthNameContext>(0);
		}
		public DateValuePartContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dateValuePart; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterDateValuePart(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitDateValuePart(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDateValuePart(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DateValuePartContext dateValuePart() {
		DateValuePartContext _localctx = new DateValuePartContext(_ctx, State);
		EnterRule(_localctx, 8, RULE_dateValuePart);
		try {
			State = 62;
			switch (_input.La(1)) {
			case DIGIT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 60; dateValueNumber();
				}
				break;
			case JANUARY:
			case FEBRUARY:
			case MARCH:
			case APRIL:
			case MAY:
			case JUNE:
			case JULY:
			case AUGUST:
			case SEPTEMBER:
			case OCTOBER:
			case NOVEMBER:
			case DECEMBER:
			case JAN:
			case FEB:
			case MAR:
			case APR:
			case JUN:
			case JUL:
			case AUG:
			case SEP:
			case OCT:
			case NOV:
			case DEC:
				EnterOuterAlt(_localctx, 2);
				{
				State = 61; monthName();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateValueNumberContext : ParserRuleContext {
		public ITerminalNode[] DIGIT() { return GetTokens(VBADateParser.DIGIT); }
		public ITerminalNode DIGIT(int i) {
			return GetToken(VBADateParser.DIGIT, i);
		}
		public DateValueNumberContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dateValueNumber; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterDateValueNumber(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitDateValueNumber(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDateValueNumber(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DateValueNumberContext dateValueNumber() {
		DateValueNumberContext _localctx = new DateValueNumberContext(_ctx, State);
		EnterRule(_localctx, 10, RULE_dateValueNumber);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 65;
			_errHandler.Sync(this);
			_la = _input.La(1);
			do {
				{
				{
				State = 64; Match(DIGIT);
				}
				}
				State = 67;
				_errHandler.Sync(this);
				_la = _input.La(1);
			} while ( _la==DIGIT );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DateSeparatorContext : ParserRuleContext {
		public ITerminalNode[] WS() { return GetTokens(VBADateParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(VBADateParser.WS, i);
		}
		public ITerminalNode SLASH() { return GetToken(VBADateParser.SLASH, 0); }
		public ITerminalNode COMMA() { return GetToken(VBADateParser.COMMA, 0); }
		public ITerminalNode DASH() { return GetToken(VBADateParser.DASH, 0); }
		public DateSeparatorContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_dateSeparator; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterDateSeparator(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitDateSeparator(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDateSeparator(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DateSeparatorContext dateSeparator() {
		DateSeparatorContext _localctx = new DateSeparatorContext(_ctx, State);
		EnterRule(_localctx, 12, RULE_dateSeparator);
		int _la;
		try {
			State = 87;
			_errHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(_input,10,_ctx) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 70;
				_errHandler.Sync(this);
				_la = _input.La(1);
				do {
					{
					{
					State = 69; Match(WS);
					}
					}
					State = 72;
					_errHandler.Sync(this);
					_la = _input.La(1);
				} while ( _la==WS );
				}
				break;

			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				{
				State = 77;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==WS) {
					{
					{
					State = 74; Match(WS);
					}
					}
					State = 79;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				State = 80;
				_la = _input.La(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << COMMA) | (1L << DASH) | (1L << SLASH))) != 0)) ) {
				_errHandler.RecoverInline(this);
				} else {
					Consume();
				}
				State = 84;
				_errHandler.Sync(this);
				_la = _input.La(1);
				while (_la==WS) {
					{
					{
					State = 81; Match(WS);
					}
					}
					State = 86;
					_errHandler.Sync(this);
					_la = _input.La(1);
				}
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class MonthNameContext : ParserRuleContext {
		public EnglishMonthNameContext englishMonthName() {
			return GetRuleContext<EnglishMonthNameContext>(0);
		}
		public EnglishMonthAbbreviationContext englishMonthAbbreviation() {
			return GetRuleContext<EnglishMonthAbbreviationContext>(0);
		}
		public MonthNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_monthName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterMonthName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitMonthName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMonthName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MonthNameContext monthName() {
		MonthNameContext _localctx = new MonthNameContext(_ctx, State);
		EnterRule(_localctx, 14, RULE_monthName);
		try {
			State = 91;
			switch (_input.La(1)) {
			case JANUARY:
			case FEBRUARY:
			case MARCH:
			case APRIL:
			case MAY:
			case JUNE:
			case JULY:
			case AUGUST:
			case SEPTEMBER:
			case OCTOBER:
			case NOVEMBER:
			case DECEMBER:
				EnterOuterAlt(_localctx, 1);
				{
				State = 89; englishMonthName();
				}
				break;
			case JAN:
			case FEB:
			case MAR:
			case APR:
			case JUN:
			case JUL:
			case AUG:
			case SEP:
			case OCT:
			case NOV:
			case DEC:
				EnterOuterAlt(_localctx, 2);
				{
				State = 90; englishMonthAbbreviation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnglishMonthNameContext : ParserRuleContext {
		public ITerminalNode JANUARY() { return GetToken(VBADateParser.JANUARY, 0); }
		public ITerminalNode FEBRUARY() { return GetToken(VBADateParser.FEBRUARY, 0); }
		public ITerminalNode MARCH() { return GetToken(VBADateParser.MARCH, 0); }
		public ITerminalNode APRIL() { return GetToken(VBADateParser.APRIL, 0); }
		public ITerminalNode MAY() { return GetToken(VBADateParser.MAY, 0); }
		public ITerminalNode JUNE() { return GetToken(VBADateParser.JUNE, 0); }
		public ITerminalNode JULY() { return GetToken(VBADateParser.JULY, 0); }
		public ITerminalNode AUGUST() { return GetToken(VBADateParser.AUGUST, 0); }
		public ITerminalNode SEPTEMBER() { return GetToken(VBADateParser.SEPTEMBER, 0); }
		public ITerminalNode OCTOBER() { return GetToken(VBADateParser.OCTOBER, 0); }
		public ITerminalNode NOVEMBER() { return GetToken(VBADateParser.NOVEMBER, 0); }
		public ITerminalNode DECEMBER() { return GetToken(VBADateParser.DECEMBER, 0); }
		public EnglishMonthNameContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_englishMonthName; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterEnglishMonthName(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitEnglishMonthName(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnglishMonthName(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnglishMonthNameContext englishMonthName() {
		EnglishMonthNameContext _localctx = new EnglishMonthNameContext(_ctx, State);
		EnterRule(_localctx, 16, RULE_englishMonthName);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 93;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << JANUARY) | (1L << FEBRUARY) | (1L << MARCH) | (1L << APRIL) | (1L << MAY) | (1L << JUNE) | (1L << JULY) | (1L << AUGUST) | (1L << SEPTEMBER) | (1L << OCTOBER) | (1L << NOVEMBER) | (1L << DECEMBER))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EnglishMonthAbbreviationContext : ParserRuleContext {
		public ITerminalNode JAN() { return GetToken(VBADateParser.JAN, 0); }
		public ITerminalNode FEB() { return GetToken(VBADateParser.FEB, 0); }
		public ITerminalNode MAR() { return GetToken(VBADateParser.MAR, 0); }
		public ITerminalNode APR() { return GetToken(VBADateParser.APR, 0); }
		public ITerminalNode JUN() { return GetToken(VBADateParser.JUN, 0); }
		public ITerminalNode JUL() { return GetToken(VBADateParser.JUL, 0); }
		public ITerminalNode AUG() { return GetToken(VBADateParser.AUG, 0); }
		public ITerminalNode SEP() { return GetToken(VBADateParser.SEP, 0); }
		public ITerminalNode OCT() { return GetToken(VBADateParser.OCT, 0); }
		public ITerminalNode NOV() { return GetToken(VBADateParser.NOV, 0); }
		public ITerminalNode DEC() { return GetToken(VBADateParser.DEC, 0); }
		public EnglishMonthAbbreviationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_englishMonthAbbreviation; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterEnglishMonthAbbreviation(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitEnglishMonthAbbreviation(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEnglishMonthAbbreviation(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EnglishMonthAbbreviationContext englishMonthAbbreviation() {
		EnglishMonthAbbreviationContext _localctx = new EnglishMonthAbbreviationContext(_ctx, State);
		EnterRule(_localctx, 18, RULE_englishMonthAbbreviation);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 95;
			_la = _input.La(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << JAN) | (1L << FEB) | (1L << MAR) | (1L << APR) | (1L << JUN) | (1L << JUL) | (1L << AUG) | (1L << SEP) | (1L << OCT) | (1L << NOV) | (1L << DEC))) != 0)) ) {
			_errHandler.RecoverInline(this);
			} else {
				Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.ReportError(this, re);
			_errHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class TimeValueContext : ParserRuleContext {
		public TimeValuePartContext[] timeValuePart() {
			return GetRuleContexts<TimeValuePartContext>();
		}
		public TimeValuePartContext timeValuePart(int i) {
			return GetRuleContext<TimeValuePartContext>(i);
		}
		public ITerminalNode AMPM() { return GetToken(VBADateParser.AMPM, 0); }
		public ITerminalNode[] WS() { return GetTokens(VBADateParser.WS); }
		public ITerminalNode WS(int i) {
			return GetToken(VBADateParser.WS, i);
		}
		public TimeSeparatorContext[] timeSeparator() {
			return GetRuleContexts<TimeSeparatorContext>();
		}
		public TimeSeparatorContext timeSeparator(int i) {
			return GetRuleContext<TimeSeparatorContext>(i);
		}
		public TimeValueContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_timeValue; } }
		public override void EnterRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.EnterTimeValue(this);
		}
		public override void ExitRule(IParseTreeListener listener) {
			IVBADateListener typedListener = listener as IVBADateListener;
			if (typedListener != null) typedListener.ExitTimeValue(this);
		}
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IVBADateVisitor<TResult> typedVisitor = visitor as IVBADateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTimeValue(this);
			else return visitor.VisitChildren(this);
		}
	}
